# call_center_back

./: .env  .gitignore  =2.8.10  =4.5.0  =58.0.0  Dockerfile  README.md  README.txt  analyze_project.py  app.py  async_db_connection.py  call_center_back  check_list_data.jsonl  check_list_data_prepared.jsonl  clear_logs.py  data_processing.py  db_connection.py  db_setup.py  docker-compose.yml  fine_tune_model.py  gpt_config.py  index.html  install.sh  logging_config.py  main.py  performance_monitor.py  project_summary.py  pyproject.toml  pyrightconfig.json  requirements.txt  result_logging.py  run.sh  test.py  test.txt  test_main.py  training_data.jsonl  ЕУЫЕ  КОМАНДЫ ПРОЕКТА.txt  ТЕСТОВЫЙ ФАЙЛ
.github/workflows/: deploy.yml
call_center_back/: README.md  async_db_connection.py  logging_config.py  test_db_connection.py
myenv/: pyvenv.cfg
