[build-system]
requires = ["setuptools>=58.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "your-project"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "3.8.5"
aiomysql = "0.2.0"
aiosignal = "1.3.1"
aiosqlite = "0.17.0"
attrs = "23.2.0"
blinker = "1.8.2"
certifi = "2024.6.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
flask = "2.3.4"
frozenlist = "1.4.1"
idna = "3.7"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
markupsafe = "2.1.5"
multidict = "6.0.5"
openai = "1.37.1"
pymysql = "1.1.1"
python-dotenv = "0.21.0"
requests = "2.31.0"
tqdm = "4.66.4"
typing-extensions = "4.12.2"
urllib3 = "2.2.2"
werkzeug = "2.3.6"
yarl = "1.9.4"
pandas = "2.0.5"
scikit-learn = "1.3.2"
nltk = "3.6.7"
setuptools = ">=58.0.0"
mosaicml = "0.23.5"
torch = "2.1.2"
requests-mock = "1.9.3"
sqlalchemy = "2.0.16"
prompt-toolkit = "3.0.41"
babel = "2.10"
numpy = "1.24.4"
quart = "0.19.6"
theano = "1.0.5"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
